--- a/index.html
+++ b/index.html
@@ -3,20 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Better Weather</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Better Weather Dashboard</title>
+<!-- bootstrap link goes here -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css" />
 </head>
-<body>
 <header><h1>Weather Dashboard</h1></header>
-<section class="searchCity">
-<h1>Search for a City: </h1>
+<body>
+    <div class="container">
+    <div class="Weather-input">
+<h3>Search for City: </h3>
+<input type="text" placeholder="your City">
+<button class="search-btn">Search</button>
+</div>
+<div class="separator"></div>
+    <!-- <button class="search-btn">Search</button> -->
+<div class="weather-data">
+    <div class="current-weather">
+        <div class="details">
+            <h2>Delhi</h2>
+            <h4>Temp</h4>
+            <h4>Wind</h4>
+            <h4>Humidity</h4>
+        </div>
+    </div>
+</div>
+<br>
+<div class="days-forecasts">
+    <h2> 5-day Forecast</h2>
+    <ul class="weather-cards">
+        <li class="card">
+            <h2>Delhi</h2>
+            <h4>Temp</h4>
+            <h4>Wind</h4>
+            <h4>Humidity</h4>
+        </li>
+        <li class="card">
+            <h2>Delhi</h2>
+            <h4>Temp</h4>
+            <h4>Wind</h4>
+            <h4>Humidity</h4>
+        </li>
+        <li class="card">
+            <h2>Delhi</h2>
+            <h4>Temp</h4>
+            <h4>Wind</h4>
+            <h4>Humidity</h4>
+        </li>
+        <li class="card">
+            <h2>Delhi</h2>
+            <h4>Temp</h4>
+            <h4>Wind</h4>
+            <h4>Humidity</h4>
+        </li>
+        <li class="card">
+            <h2>Delhi</h2>
+            <h4>Temp</h4>
+            <h4>Wind</h4>
+            <h4>Humidity</h4>
+        </li>
+    </ul>
+</div>
 
 
 
 
-</section>
 
 
-    <script src="script.js"></script>
+
+
+
+<script src="script.js"></script>
+
+
+
+</body>
+    
 </body>
 </html>
