--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!-- bootstrap link goes here -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
 </head>
 <header><h1>Weather Dashboard</h1></header>
 <body>
@@ -74,7 +74,7 @@
 
 
 
-<script src="script.js"></script>
+<script src="./assets/script.js"></script>
 
 
 
